Fix HTML structure and close style tag

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <title>
 Simple registration page
 </title>
-<style link="/styles.css">
-<head>
+<style link="/styles.css"></style>
+</head>
 <body>
 <center>
 <h2>simple login page</h2>
@@ -19,6 +19,5 @@ Simple registration page
 <p>dont have account?<p>
 <a>Sign Up</a>
 </center>
-</div>
 </body>
 </html>
